--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ h6 {
   transition: all 0.5s;
   z-index: 997;
   transition: all 0.5s;
-  padding: 15px 10px;
+  #padding: 15px 10px;
   position: fixed;
   left: 0;
   top: 0;
